Edit color names

--- a/css/weatheredOakStyle3.css
+++ b/css/weatheredOakStyle3.css
@@ -16,16 +16,16 @@ Date Last Modified: 12 November, 2021
 
 /*
     ^^^^ Colors Used ^^^^
-    #0b171d
-    #466273
-    #4D7893
-    #9DB6C4
-    #DAD7CD
-    #A3B18A
-    #588157
-    #3A5A40
-    #344E41
-    #590004
+    #0b171d - Rich Black Fogra 29
+    #466273 - Dark Electric Blue
+    #4D7893 - Celadon Blue
+    #9DB6C4 - Pewter Blue
+    #DAD7CD - Timberwolf
+    #A3B18A - Laurel Green
+    #588157 - Fern Green
+    #3A5A40 - Hunter Green
+    #344E41 - Brunswick Green
+    #A20104 - Rofous
 */
 
 /*  ^^^ Global Styles ^^^  */
