--- a/css/weatheredOakStyle3.css
+++ b/css/weatheredOakStyle3.css
@@ -121,6 +121,7 @@ h1, h2 {
 .header .nav-item .nav-link:after {
     top: -5px;
 }
+
 /* Hamburger Button */
 
 .header .nav-item {
@@ -147,170 +148,165 @@ h1, h2 {
     top: 0;
 }
 
-/*
+.porthole {
+    background: #9CB0B8;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 2fr 2fr;
+}
+
 .boat-wrap {
+    /*This contains a tugboat cruising through choppy water as a cloud drifts overhead.
+        The boat bobs slightly in the sea.*/
+    background: #ace5ee;
+    width: 2fr;
+    height: 2fr;
+    border-radius: 20%;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+    justify-content: center;
+}
 
-       This contains a tugboat cruising through choppy water as a cloud drifts overhead.
-        The boat bobs slightly in the sea.
+.aqua {
+    height: 200px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+}
 
-        background: #ace5ee;
-        width: 2fr;
-        height: 2fr;
-        border-radius: 20%;
-        margin: 10px;
-        display: flex;
-        align-items: center;
-        position: relative;
-        overflow: hidden;
-        justify-content: center;
-    }
-    
-    .aqua {
-        height: 200px;
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        left: 0;
-    }
-    
-    .aqua img {
-        width: 150%;
-    }
-    
-    .waves {
-        height: 100%;
-        position: absolute;
-        right: 0;
-        animation: waves 10s linear infinite;
-    }
-    
-    @keyframes waves {
-        0% {
-            transform: translate(100px);
-        }
-        100% {
-            transform: translate(10px);
-        }
-    }
-    
-    .tugboat {
-        animation: boat 3s linear infinite;
-        background-repeat: no-repeat;
-        bottom: 200px;
-        height: 75px;
-        left: 30%;
-        position: absolute;
-        width: 400px;
-    }
-    
-    .tugboat img {
-        width: 65%;
-    }
-    
-    @keyframes boat {
-        0% {
-            transform: rotate(0);
-        }
-        50% {
-            transform: rotate(-3deg);
-        }
-        100% {
-            transform: rotate(0);
-        }
-    }
-    
-    .cloud3 {
-        animation: cloud 30s linear infinite;
-        background-repeat: no-repeat;
-        height: 300px;
-        left: 0;
-        position: absolute;
-        width: 297px;
-    }
-    
-    .cloud3 img {
-        width: 50%;
-    }
-    
-    @keyframes cloud {
-        0% {
-            left: -30%;
-        }
-        100% {
-            left: 100%;
-        }
-    }
-      light {
-  background: conic-gradient( black 0deg 85deg, 
-    white 85deg 95deg, 
-    black 95deg 265deg, 
-    white 265deg 275deg, 
-    black 0deg );
+.aqua img {
+    width: 150%;
+}
 
-  width: 180vw;
-  height: 100vh;
-  border-radius: 0%;
-  filter: blur( 10px );
-  position: relative;
-  top: -23vh;
-  animation: flash 2s linear infinite;
-  animation-direction: alternate-reverse;
+.waves {
+    height: 100%;
+    position: absolute;
+    right: 0;
+    animation: waves 10s linear infinite;
+}
 
+@keyframes waves {
+    0% {
+        transform: translate(100px);
     }
-
-    lighthouse {
-  
-  position: absolute;
-  width: 10vw;
-  height: 50vh;
-  left: 85vw;
-  bottom: 30vh;
+    100% {
+        transform: translate(10px);
     }
-    lighthouse::before {
-  
-  content: "";
-  
-  position: absolute;
-  width: 20vh;
-  height: 5vh;
-  background-color: black;
-  top: 60%;
+}
 
-  box-shadow: 0 10vh 0vh black;
+.tugboat {
+    animation: boat 3s linear infinite;
+    background-repeat: no-repeat;
+    bottom: 200px;
+    height: 75px;
+    left: 30%;
+    position: absolute;
+    width: 400px;
+}
+
+.tugboat img {
+    width: 65%;
+}
+
+@keyframes boat {
+    0% {
+        transform: rotate(0);
     }
+    50% {
+        transform: rotate(-3deg);
+    }
+    100% {
+        transform: rotate(0);
+    }
+}
 
-    lighthouse::after {
-  
-  content: "";
-  
-  position: absolute;
-  width: 80%;
-  height: 14%;
-  left: 10%;
-  right: 90%;
-  background-color: black;
-  top: 5%;
-  border-radius: 30% 30% 0 0;
+.cloud3 {
+    animation: cloud 30s linear infinite;
+    background-repeat: no-repeat;
+    height: 300px;
+    left: 0;
+    position: absolute;
+    width: 297px;
+}
 
+.cloud3 img {
+    width: 50%;
+}
+
+@keyframes cloud {
+    0% {
+        left: -30%;
+    }
+    100% {
+        left: 100%;
+    }
+}
+
+light {
+    background: conic-gradient( black 0deg 85deg, white 85deg 95deg, black 95deg 265deg, white 265deg 275deg, black 0deg);
+    width: 180vw;
+    height: 100vh;
+    border-radius: 0%;
+    filter: blur( 10px);
+    position: relative;
+    top: -49vh;
+    animation: flash 2s linear infinite;
+    animation-direction: alternate-reverse;
+}
+
+lighthouse {
+    position: absolute;
+    width: 10vw;
+    height: 50vh;
+    left: 85vw;
+    bottom: 30vh;
+}
+
+lighthouse::before {
+    content: "";
+    position: absolute;
+    width: 20vh;
+    height: 5vh;
+    background-color: black;
+    top: 60%;
+    box-shadow: 0 10vh 0vh black;
+}
+
+lighthouse::after {
+    content: "";
+    position: absolute;
+    width: 80%;
+    height: 14%;
+    left: 10%;
+    right: 90%;
+    background-color: black;
+    top: 5%;
+    border-radius: 30% 30% 0 0;
     animation: light 2s linear infinite;
-  animation-direction: alternate-reverse;
+    animation-direction: alternate-reverse;
+}
 
+@keyframes flash {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
+@keyframes light {
+    from {
+        background: black;
     }
-    @keyframes flash {
-  
-  from { opacity: 0; }
-  to { opacity: 1; }
-  
+    to {
+        background: white;
     }
-
-    @keyframes light {
-  
-  from { background: black; }
-  to { background: white; }
-  
-    }
-*/
+}
 
 @media screen and (min-width:750px) {
     header, footer {
