--- a/css/weatheredOakStyle3.css
+++ b/css/weatheredOakStyle3.css
@@ -171,19 +171,19 @@ h1, h2 {
 }
 
 .aqua {
-    height: 200px;
+    height: 90px;
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 90%;
     left: 0;
 }
 
 .aqua img {
-    width: 150%;
+    width: 90%;
 }
 
 .waves {
-    height: 100%;
+    height: 80%;
     position: absolute;
     right: 0;
     animation: waves 10s linear infinite;
@@ -201,15 +201,15 @@ h1, h2 {
 .tugboat {
     animation: boat 3s linear infinite;
     background-repeat: no-repeat;
-    bottom: 200px;
+    bottom: 100px;
     height: 75px;
     left: 30%;
     position: absolute;
-    width: 400px;
+    width: 200px;
 }
 
 .tugboat img {
-    width: 65%;
+    width: 45%;
 }
 
 @keyframes boat {
@@ -246,7 +246,7 @@ h1, h2 {
     }
 }
 
-light {
+.light {
     background: conic-gradient( black 0deg 85deg, white 85deg 95deg, black 95deg 265deg, white 265deg 275deg, black 0deg);
     width: 180vw;
     height: 100vh;
@@ -258,7 +258,7 @@ light {
     animation-direction: alternate-reverse;
 }
 
-lighthouse {
+.lighthouse {
     position: absolute;
     width: 10vw;
     height: 50vh;
@@ -266,7 +266,7 @@ lighthouse {
     bottom: 30vh;
 }
 
-lighthouse::before {
+.lighthouse::before {
     content: "";
     position: absolute;
     width: 20vh;
@@ -276,7 +276,7 @@ lighthouse::before {
     box-shadow: 0 10vh 0vh black;
 }
 
-lighthouse::after {
+.lighthouse::after {
     content: "";
     position: absolute;
     width: 80%;
@@ -325,7 +325,26 @@ lighthouse::after {
         font-size: 30px;
         line-height: 1;
     }
+    .porthole {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+    .boat-wrap {
+        display: flex;
+        width: 300px;
+        height: 300px;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .tugboat img {
+        width: 40%;
+        height: 200px;
+    }
+    .cloud3 img {
+        width: 30%;
+    }
 }
+
 
 @media screen and (max-width: 450px) {
     h1 {
